--- a/counter.html
+++ b/counter.html
@@ -17,9 +17,11 @@
 		}
 
 		input[type="color"] {
+			border: 0;
+			padding: 0;
+			opacity: 0.2;
 			vertical-align: middle;
-			padding: 0px;
-			opacity: 0;
+			width: 2em;
 		}
 
 		#container {
