--- a/dice.html
+++ b/dice.html
@@ -6,15 +6,22 @@
 	<link rel="icon"
 	href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 112 100%22><text y=%22.9em%22 font-size=%2290%22>🎲</text></svg>">
 	<style>
-		::-webkit-scrollbar {
-			width: 10px;
+		.styled-scrollbars {
+			--scrollbar-grip-color: black;
+			overflow: auto;
+			scrollbar-color: var(--scrollbar-grip-color) transparent;
+			scrollbar-width: thin;
 		}
-		::-webkit-scrollbar-thumb {
+		.styled-scrollbars::-webkit-scrollbar {
+			width: 10px;
+			height: 10px;
+		}
+		.styled-scrollbars::-webkit-scrollbar-thumb {
 			border: 1px outset;
-			border-color: black;
+			border-color: var(--scrollbar-grip-color);
 			border-radius: 5px;
 		}
-		::-webkit-scrollbar-thumb:hover {
+		.styled-scrollbars::-webkit-scrollbar-thumb:hover {
 			border-width: 2px;
 		}
 
@@ -81,7 +88,7 @@
 
 <body onload="set_colors()" onhashchange="set_colors()">
 	<h1><span onclick="egg('white&black')">Dice</span> <span onclick="egg()">Roller</span></h1>
-	<div id="results">
+	<div id="results" class="styled-scrollbars">
 	</div>
 	<p>
 		<span class="die" onclick="sleep(1).then(roll_prompt)"><span class="inset">Roll</span></span>
@@ -162,7 +169,7 @@
 			document.body.style.backgroundColor = bg
 			document.body.style.color = fg
 			const style = document.querySelector('style')
-			style.innerText = style.innerText.replaceAll(/(scrollbar-thumb[ \t{]+.*?\s)border-color:.*?;/gs, `$1border-color: ${fg};`)
+			style.innerText = style.innerText.replaceAll(/(--scrollbar-grip-color:).*?;/gs, `$1${fg};`)
 			document.getElementById('results').style.borderColor = fg
 			;[...document.querySelectorAll('.die')].forEach(e => e.style.backgroundColor = fg)
 			;[...document.querySelectorAll('.inset')].forEach(e => e.style.textShadow = '1px 1px 1px ' + bg)
