--- a/tournament/index.html
+++ b/tournament/index.html
@@ -9,11 +9,17 @@
 		href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 112 100%22><text y=%22.9em%22 font-size=%2290%22>🏆</text></svg>">
 	<link rel="stylesheet" href="style.css" type="text/css" media="all">
 	<script src="tournament.js"></script>
+	<style>
+		body {
+			--bgcolor: rgb(89, 19, 25);
+			--fgcolor: rgb(252, 155, 23);
+		}
+	</style>
 </head>
 
 <body onhashchange="set_colors()" onload="init()">
 	<h1><span onclick="egg('##591319&#fc9b17')">G</span>roup <span onclick="egg('yellowgreen&black')">T</span>ournament <span onclick="egg()">R</span>anking <span onclick="egg('black&white')">S</span>ystem</h1>
-	<div onclick="this.classList.toggle('rainbow')">Version 2022-07-04, by Cees Timmerman</div>
+	<div onclick="this.classList.toggle('rainbow')">Version 2022-07-10, by Cees Timmerman</div>
 	<h4 onclick="this.classList.toggle('fade')" id="date"></h4>
 	<div id="names">
 		<h3>Enter players:</h3>
