--- a/zodiac.html
+++ b/zodiac.html
@@ -1,5 +1,11 @@
-<html>
-<head><title>Zodiac Calculator</title></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Zodiac Calculator</title>
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 112 100%22><text y=%22.9em%22 font-size=%2290%22>🌃</text></svg>">
+</head>
 <body>
 <h1>Zodiac Calculator</h1>
 <input id="date" type="datetime-local" onchange="zodiac(this.value)">
